Big fixes and alignments for iOS. Badge for notifications

--- a/carpooling-mobile/www/css/style.css
+++ b/carpooling-mobile/www/css/style.css
@@ -226,13 +226,24 @@ placeautocomplete {
 }
 placeautocomplete ul {
     position: absolute;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.95);
+    border: 1px solid #ddd;
     z-index: 100;
 }
 placeautocomplete ul li {
+/*
     padding-top: 0.3em;
     padding-bottom: 0.3em;
+*/
+  padding: 8px;
 }
+
+.placeautocomplete ul li .highlight {
+  font-weight: bold;
+}
+
+
+
 .card.card-trip,
 .card.card-community,
 .card.card-notif {
@@ -485,14 +496,14 @@ placeautocomplete ul li {
 }
 .day-change .button-day.b_left {
     margin-left: 1em;
-    padding-left: 0.2em;
+    padding: 0;
     position: absolute;
     top: 0.8em;
     left: 1em;
 }
 .day-change .button-day.b_right {
     margin-right: 1em;
-    padding-right: 0.2em;
+    padding: 0em;
     position: absolute;
     top: 0.8em;
     right: 1em;
@@ -882,4 +893,21 @@ h5 {
 }
 .credits .credits-mail {
     text-decoration: underline;
+}
+
+.header-badge {
+    top: -37px !important;
+    /*    left: 10px !important;*/
+    font-size: x-small !important;
+    margin-left: -5px!important;
+    display: table!important;
+    margin-right: 10px!important;
+/*    margin-top: -10px;*/
+    padding: 3px 3px 3px 3px;
+    width: 22px;
+    display: block!inspect;
+    /*
+    top: -32px !important;
+    padding: 2px 12px 2px 3px;
+*/
 }
